package pkg;  

option java_package = "com.baidu.bjf.remoting.protobuf.simpletypes";
option java_outer_classname = "AllTypes";  
  
message InterClassName {  
	optional double doubleF = 1;
	optional float floatF = 2;
	optional int32 int32F = 3;
	optional int64 int64F = 4;
	optional uint32 uint32F = 5;
	optional uint64 uint64F = 6;
	optional sint32 sint32F = 7;
	optional sint64 sint64F = 8;
	optional fixed32 fixed32F = 9;
	optional fixed64 fixed64F = 10;
	optional sfixed32 sfixed32F = 11;
	optional sfixed64 sfixed64F = 12;
	optional bool boolF = 13;
	optional string stringF = 14;
  optional bytes bytesF = 15;
  optional TypeDef enumT = 16;
  
  enum TypeDef {
    TEXT = 1;
    NUMBER = 2;
    DECIMAL = 4;
    ID = 8;
    URL = 16;
};
}  
  
